--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,16 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     url: jdbc:mysql://192.168.211.180:3306/pms
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+
 logging:
   file: pms.log
   path: /app/log
