--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,8 @@
 server:
-  port: 8000
-
+  port: 8080
 spring:
-  datasource:
-    url: jdbc:mysql://192.168.99.100:3306/pms
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    open-in-view: false
+  profiles:
+    active: dev
 
 logging:
   file: pms.log
@@ -21,3 +13,9 @@ context:
     classes: com.wj5633.pms.event.MyApplicationListener
   initializer:
     classes: com.wj5633.pms.initializer.MyApplicationContextInitializer
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
